<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="start">Let\'s start</string>
    <string name="instructions">Instructions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoes">Shoes</string>
    <string name="instruction1">Instruction1</string>
    <string name="instruction2">Instruction2</string>
    <string name="shoe_name_edit_label">Shoe name</string>
    <string name="shoe_size_edit_label">Shoe size</string>
    <string name="shoe_description_edit_label">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
